--- a/src/global.css
+++ b/src/global.css
@@ -11,6 +11,7 @@
   --blue: #4EA8DE;
   --purple-dark: #5E60CE;
   --blue-dark: #1E6F9F;
+  --danger: #E25858;
 
   --gray-100: #F2F2F2;
   --gray-200: #d9d9d9;
